# azure-storage-sas

./: .gitignore  Cargo.toml  README.md  run-examples.sh  shell.nix
examples/: blob_sas_expiry.rs  blob_sas_read.rs  blob_sas_required_headers.rs  blob_sas_write.rs
examples/common/: mod.rs
src/: key.rs  lib.rs  sas.rs  test_utils.rs
src/resource/: blob.rs  file.rs  queue.rs  table.rs
src/resource/blob/: container.rs  directory.rs  snapshot.rs  version.rs
src/resource/file/: share.rs
src/sas/: builder.rs
