[package]
name = "azure_storage_sas"
version = "0.1.0"
edition = "2024"

[dependencies]
azure_core = { version = "1", features = ["hmac_rust"] }
azure_identity = { version = "1" }
hmac = "0.12"
sha2 = "0.10"
base64 = { version = "0.22" }
time = { version = "0.3", features = ["formatting", "macros"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["std"] }

[dev-dependencies]
time = { version = "0.3", features = ["formatting", "macros"] }
